--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
         <div class="left">Sam's Portfoilo</div>
         <div class="right">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Services</a></li>
-            <li><a href="/">Contact Me</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact Me</a></li>
           </ul>
         </div>
       </nav>
