--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       <section class="second-section">
         <span class="text-gray">What I have done so far</span>
         <h1>Work Experience</h1>
+
+
         <div class="box">
           <div class="vertical">
             <img class="image-top" src="man.webp" alt="" />
@@ -67,6 +69,8 @@
               praesentium pariatur quae facilis, numquam, blanditiis et.
             </div>
           </div>
+
+
           <div class="vertical">
             <img class="image-top" src="man.webp" alt="" />
             <br>
@@ -78,6 +82,7 @@
               praesentium pariatur quae facilis, numquam, blanditiis et.
             </div>
           </div>
+
           <div class="vertical">
             <img class="image-top" src="html logo.webp" alt="" />
             <br>
@@ -89,6 +94,8 @@
               praesentium pariatur quae facilis, numquam, blanditiis et.
             </div>
           </div>
+
+
           <div class="vertical">
             <img class="image-top" src="html logo.webp" alt="" />
             <br>
@@ -100,6 +107,8 @@
               praesentium pariatur quae facilis, numquam, blanditiis et.
             </div>
           </div>
+
+
           <div class="vertical">
             <img class="image-top" src="man.webp" alt="" />
             <br>
@@ -115,13 +124,19 @@
       </section>
 
 
-      
+
     </main>
+
+    <!-- here i started footer -->
     <footer>
+
+
       <div class="footer">
         <div class="footer-first">
           <h3>Sam's Devloper Portfoilo</h3>
         </div>
+
+
         <div class="footer-second">
           <ul>
             <li>Home</li>
@@ -130,6 +145,8 @@
             <li>Contact Me</li>
           </ul>
         </div>
+
+
         <div class="footer-third">
           <ul>
             <li>Home</li>
@@ -138,6 +155,8 @@
             <li>Contact Me</li>
           </ul>
         </div>
+
+
         <div class="footer-fourth">
           <ul>
             <li>Home</li>
@@ -147,6 +166,8 @@
           </ul>
         </div>
       </div>
+
+      <!-- here is copyright-section -->
       <div class="footer-rights">
         &copy;samsportfolio.com | All rights reserved
       </div>
@@ -156,7 +177,7 @@
     <!-- Setup and start animation! -->
     <script>
       var typed = new Typed("#element", {
-        strings: ["App Devloper", "Web Designer", "Game Devloper"],
+        strings: ["App Developer", "Web Designer", "Game Developer"],
         typeSpeed: 50,
       });
     </script>
