Work done so for Section

--- a/index.html
+++ b/index.html
@@ -59,14 +59,45 @@
 
         <div class="box">
           <div class="vertical">
-            <img class="image-top" src="man.webp" alt="" />
+            <img class="image-top" src="amazon-4k-logo-qhd.jpg" alt="" />
             <br>
-            <div class="vertical-title">work devloper (2012-2014)</div>
+            <div class="vertical-title">Amazon Clone</div>
             <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
-              eius mollitia eligendi voluptates eveniet nostrum repellendus
-              cupiditate exercitationem doloremque aliquid sunt sed natus
-              praesentium pariatur quae facilis, numquam, blanditiis et.
+            I create Amazon Clone by Youtube reference(@Apna College) with help of HTML and CSS.This Clone is not responsive
+             (i will fix it in upcoming days).Also this is my project so lots of things to modify.
+             Stay Tuned!
+
+            </div>
+          </div>
+
+
+          <div class="vertical">
+            <img class="image-top" src="Netflix-Emblem.jpg" alt="" />
+            <br>
+            <div class="vertical-title">Netflix Clone</div>
+            <div class="vertical-desc">
+              With the  help from Youtube (@Code With Harry),I made clone of Netflix which is used to be responsive.
+              Code is written in HTML and CSS .
+            </div>
+          </div>
+
+          <div class="vertical">
+            <img class="image-top" src="block chain.jpg"p alt="" />
+            <br>
+            <div class="vertical-title">Block Chain Web Application</div>
+            <div class="vertical-desc">
+              Working on Block Chain Web Application which is design by @Mihir Ranjan and Developed by me & @Som Anand.
+              Design is avialable on Figma.
+            </div>
+          </div>
+
+
+          <div class="vertical">
+            <img class="image-top" src="bookmyshow-logo.jpg" alt="" />
+            <br>
+            <div class="vertical-title">Book my Show</div>
+            <div class="vertical-desc">
+             This project is offcourse in future list.I will write in HTML ,CSS and alongside javaScript.I will make without any reference or help,just inspecting main website.  
             </div>
           </div>
 
@@ -74,50 +105,9 @@
           <div class="vertical">
             <img class="image-top" src="man.webp" alt="" />
             <br>
-            <div class="vertical-title">work devloper (2012-2014)</div>
+            <div class="vertical-title">Game Developer(In Future)</div>
             <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
-              eius mollitia eligendi voluptates eveniet nostrum repellendus
-              cupiditate exercitationem doloremque aliquid sunt sed natus
-              praesentium pariatur quae facilis, numquam, blanditiis et.
-            </div>
-          </div>
-
-          <div class="vertical">
-            <img class="image-top" src="html logo.webp" alt="" />
-            <br>
-            <div class="vertical-title">work devloper (2012-2014)</div>
-            <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
-              eius mollitia eligendi voluptates eveniet nostrum repellendus
-              cupiditate exercitationem doloremque aliquid sunt sed natus
-              praesentium pariatur quae facilis, numquam, blanditiis et.
-            </div>
-          </div>
-
-
-          <div class="vertical">
-            <img class="image-top" src="html logo.webp" alt="" />
-            <br>
-            <div class="vertical-title">work devloper (2012-2014)</div>
-            <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
-              eius mollitia eligendi voluptates eveniet nostrum repellendus
-              cupiditate exercitationem doloremque aliquid sunt sed natus
-              praesentium pariatur quae facilis, numquam, blanditiis et.
-            </div>
-          </div>
-
-
-          <div class="vertical">
-            <img class="image-top" src="man.webp" alt="" />
-            <br>
-            <div class="vertical-title">work devloper (2012-2014)</div>
-            <div class="vertical-desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
-              eius mollitia eligendi voluptates eveniet nostrum repellendus
-              cupiditate exercitationem doloremque aliquid sunt sed natus
-              praesentium pariatur quae facilis, numquam, blanditiis et.
+              Want to develop game in future,this work is always sepecial for me.Not for profession but for fun.
             </div>
           </div>
         </div>
