--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <button class="btn">Visit Github</button>
         </div>
         <div class="right-section">
-          <img src="web.webp" alt=" " />
+          <img src="image.jpg" alt=" " />
         </div>
       </section>
 
