--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
-<!-- here we are starting header tag -->
+    <!-- here we are starting header tag -->
     <header>
       <nav>
         <div class="left">Sam's Portfoilo</div>
@@ -29,16 +28,13 @@
       </nav>
     </header>
 
-
     <main>
-
-
       <section class="first-section">
         <div class="left-section">
           Hi,My name is <span class="purple">Samrat</span>
           <div>and i am a Passionate</div>
           <span id="element"></span>
-          <br>
+          <br />
           <button class="btn">Download Resume</button>
           <button class="btn">Visit Github</button>
         </div>
@@ -47,85 +43,77 @@
         </div>
       </section>
 
-
-
       <hr />
-
 
       <section class="second-section">
         <span class="text-gray">What I have done so far</span>
         <h1>Work Experience</h1>
 
-
         <div class="box">
           <div class="vertical">
             <img class="image-top" src="amazon-4k-logo-qhd.jpg" alt="" />
-            <br>
+            <br />
             <div class="vertical-title">Amazon Clone</div>
             <div class="vertical-desc">
-            I create Amazon Clone by Youtube reference(@Apna College) with help of HTML and CSS.This Clone is not responsive
-             (i will fix it in upcoming days).Also this is my project so lots of things to modify.
-             Stay Tuned!
-
+              I create Amazon Clone by Youtube reference(@Apna College) with
+              help of HTML and CSS.This Clone is not responsive (i will fix it
+              in upcoming days).Also this is my project so lots of things to
+              modify. Stay Tuned!
             </div>
           </div>
-
 
           <div class="vertical">
             <img class="image-top" src="Netflix-Emblem.jpg" alt="" />
-            <br>
+            <br />
             <div class="vertical-title">Netflix Clone</div>
             <div class="vertical-desc">
-              With the  help from Youtube (@Code With Harry),I made clone of Netflix which is used to be responsive.
-              Code is written in HTML and CSS .
+              With the help from Youtube (@Code With Harry),I made clone of
+              Netflix which is used to be responsive. Code is written in HTML
+              and CSS .
             </div>
           </div>
 
           <div class="vertical">
-            <img class="image-top" src="block chain.jpg"p alt="" />
             <br>
+            <br />
             <div class="vertical-title">Block Chain Web Application</div>
             <div class="vertical-desc">
-              Working on Block Chain Web Application which is design by @Mihir Ranjan and Developed by me & @Som Anand.
-              Design is avialable on Figma.
+              Working on Block Chain Web Application which is design by @Mihir
+              Ranjan and Developed by me & @Som Anand. Design is avialable on
+              Figma.
             </div>
           </div>
-
 
           <div class="vertical">
             <img class="image-top" src="bookmyshow-logo.jpg" alt="" />
-            <br>
+            <br />
             <div class="vertical-title">Book my Show</div>
             <div class="vertical-desc">
-             This project is offcourse in future list.I will write in HTML ,CSS and alongside javaScript.I will make without any reference or help,just inspecting main website.  
+              This project is offcourse in future list.I will write in HTML ,CSS
+              and alongside javaScript.I will make without any reference or
+              help,just inspecting main website.
             </div>
           </div>
 
-
           <div class="vertical">
             <img class="image-top" src="man.webp" alt="" />
-            <br>
+            <br />
             <div class="vertical-title">Game Developer(In Future)</div>
             <div class="vertical-desc">
-              Want to develop game in future,this work is always sepecial for me.Not for profession but for fun.
+              Want to develop game in future,this work is always sepecial for
+              me.Not for profession but for fun.
             </div>
           </div>
         </div>
       </section>
-
-
-
     </main>
 
     <!-- here i started footer -->
     <footer>
-
-
       <div class="footer">
         <div class="footer-first">
           <h3>Sam's Devloper Portfoilo</h3>
         </div>
-
 
         <div class="footer-second">
           <ul>
@@ -136,7 +124,6 @@
           </ul>
         </div>
 
-
         <div class="footer-third">
           <ul>
             <li>Home</li>
@@ -145,7 +132,6 @@
             <li>Contact Me</li>
           </ul>
         </div>
-
 
         <div class="footer-fourth">
           <ul>
