--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
 
           <div class="vertical">
-            <br>
+            <img class="image-top" src="block chain.jpg" p alt="" />
             <br />
             <div class="vertical-title">Block Chain Web Application</div>
             <div class="vertical-desc">
